--- a/vignettes/more/otsu-thresholding.Rmd
+++ b/vignettes/more/otsu-thresholding.Rmd
@@ -26,4 +26,4 @@ thresholds[[1]]
 #[value 1]
 ```
 
-![**Distribution of NDVI values across Singapore in Survey Round One (light green bars, dashed vertical lines) and Two (dark green bars, solid vertical lines).** Based on image mosaic composed of data captured for Survey Round One and Survey Round Two. Vegetation was classified as pixel with values >0.35 for Round One and >0.36 for Round Two, via Otsu's thresholding. Dense vegetation was classified as pixels with values >0.62 for Round One and >0.64 for Round Two, using the same method after the first round of classification.](./images/otsu-sample-plot.png){#id .class width=60% height=60%}
+![**Distribution of NDVI values across Singapore in Survey Round One (light green bars, dashed vertical lines) and Two (dark green bars, solid vertical lines).** Based on image mosaic composed of data captured for Survey Round One and Survey Round Two. Vegetation was classified as pixel with values >0.35 for Round One and >0.36 for Round Two, via Otsu's thresholding. Dense vegetation was classified as pixels with values >0.62 for Round One and >0.64 for Round Two, using the same method after the first round of classification.](otsu-sample-plot.png){#id .class width=60% height=60%}
