--- a/vignettes/more/animal-survey-summarise.Rmd
+++ b/vignettes/more/animal-survey-summarise.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "BIRT Workflow"
+title: "Animal surveys: Raw data summaries"
+subtitle: "Comparing local diversity between sampled areas"
 author: "Author"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{BIRT Workflow}
+  %\VignetteIndexEntry{Animal surveys: Raw data summaries}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
