edit citation info & license - package authors to check later to confirm if okay

--- a/README.Rmd
+++ b/README.Rmd
@@ -51,10 +51,7 @@ devtools::load_all() # to knit manually w latest changes (not built/installed ye
 
 To cite `home2park` or acknowledge its use, please cite the following:
 
-*biodivercity: An R package to assess the diversity of animal species in urban areas. https://github.com/ecological-cities/biodivercity.*  
-
-
-<br>
+*Tan, E. Y. W., Song, X. P., Sim, H. J., Nai, J., Chong, K. Y. (2022). biodivercity: An R package to assess the diversity of animal species in urban areas. R package version 0.0.1 (unreleased). https://github.com/ecological-cities/biodivercity.*  
 
 To get a BibTex entry, run `citation("biodivercity")`.
 
