--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# biodivercity: Biodiversity indices for city landscapes
+# Biodiversity indices for city landscapes
 
 <!-- badges: start -->
 [![License: GPL v3](https://img.shields.io/badge/License-GPLv3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0)
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/biodivercity)](https://CRAN.R-project.org/package=biodivercity)
 [![R-CMD-check](https://github.com/ecological-cities/biodivercity/workflows/R-CMD-check/badge.svg)](https://github.com/ecological-cities/biodivercity/actions)
 <!-- badges: end -->
+
 
 `biodivercity` is an R package for assessing the diversity of animal species in urban areas. Refer to [package website](https://ecological-cities.github.io/biodivercity/) for demonstrations of how the package may be used.  
 
@@ -50,13 +51,11 @@ devtools::load_all() # to knit manually w latest changes (not built/installed ye
 
 ## Citation
 
-To cite `home2park` or acknowledge its use, please cite the following:
+To cite `biodivercity` or acknowledge its use, please cite the following:
 
-*biodivercity: An R package to assess the diversity of animal species in urban areas. https://github.com/ecological-cities/biodivercity.*  
-
-
-<br>
+*Tan, E. Y. W., Song, X. P., Sim, H. J., Nai, J., Chong, K. Y. (2022). biodivercity: An R package to assess the diversity of animal species in urban areas. R package version 0.0.1 (unreleased). https://github.com/ecological-cities/biodivercity.*  
 
 To get a BibTex entry, run `citation("biodivercity")`.
 
 <br>
+
