edit vignettes again and and add more to make it more complete. Other changes include:
- Re-categorise functions
- minor citation change

--- a/vignettes/more/animals-data-summaries.Rmd
+++ b/vignettes/more/animals-data-summaries.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Animal surveys: Raw data summaries"
+title: "Animals: Data summaries"
 subtitle: "Comparing local diversity between sampled areas"
 author: "Author"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Animal surveys: Raw data summaries}
+  %\VignetteIndexEntry{Animals: Data summaries}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
