correct spelling mistakes

--- a/vignettes/biodivercity.Rmd
+++ b/vignettes/biodivercity.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-Multiple frameworks to assess urban biodiversity have been proposed in both research and practice. Some conceptualise biodiversity to include genetic, phylogenetic and landscape diversity, as well as human-centric dimensions such as food provision, climate regulation and ecosystem functioning. While these frameworks offer a more comprehensive view of ‘total biodiversity’, certain components may have shortcomings in terms of their (1) causal proximity (e.g. indirect effect of landscape diversity such as forest area on diversity of other species); (2) measurability at-scale (e.g. genetic diversity, plant species diversity); and (3) precision (e.g. estimating water or thermal regulation by vegetation). Components that do not directly represent the concept of ‘biodiversity’ can also add complexity in decision-making, and risk contributing to mistrust or ignorance of the overall assessment. 
+Multiple frameworks to assess urban biodiversity have been proposed in both research and practice. Some conceptualise biodiversity to include genetic, phylogenetic and landscape diversity, as well as human-centric dimensions such as food provision, climate regulation and ecosystem functioning. While these frameworks offer a more comprehensive view of ‘total biodiversity’, certain components may have shortcomings in terms of their (1) causal proximity (e.g. indirect effect of landscape diversity such as forest area on diversity of other species); (2) measurability at-scale (e.g. genetic diversity, plant species diversity); and (3) precision (e.g. estimating water or thermal regulation by vegetation). Components that do not directly represent the concept of 'biodiversity' can also add complexity in decision-making, and risk contributing to mistrust or ignorance of the overall assessment. 
 
 The package `biodivercity` provides a way to directly assess the _habitat value_ of urban landscapes for a chosen animal group (taxon). The key features include:
 
