--- a/vignettes/more/animals-species-analyses.Rmd
+++ b/vignettes/more/animals-species-analyses.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-- Add spp lists as example data 
+- Add spp. lists as example data 
 - Most common/abundant animal species
 - Plants too? nat veg?
 - Other interesting info 
