--- a/vignettes/more/animals-data-summaries.Rmd
+++ b/vignettes/more/animals-data-summaries.Rmd
@@ -29,7 +29,7 @@ This package facilitates existing analyses
 To generate random sampling points for the collection of new data, the research area is first randomly sampled at a specified point density. Land cover is stratified into two main classes of *natural vegetation* and *urban* land cover. These two land cover types are randomly sampled independently at a point density of one point per 50 hectares of land. 
 
 ```{r random point generation, eval = FALSE}
-data(area)
+data(sampling_areas)
 
 points <- random_pt_gen()
 ```
@@ -46,17 +46,17 @@ library("dplyr")
 # library("biodivercity")
 devtools::load_all() #knit manually with latest changes to circumvent library("biodivercity") (use in final version)
 
-data(fauna)
+data(animal_observations)
 
-knitr::kable(head(fauna), caption = "**Sample survey data format**") %>%
+knitr::kable(head(animal_observations), caption = "**Sample survey data format**") %>%
   kableExtra::kable_styling("striped", font_size = 10) %>% kableExtra::scroll_box(width = "100%")
 ```
 
 ```{r sample info table, echo = FALSE, message = FALSE}
 # show sample info in kable
-data(surveys)
+data(animal_surveys)
 
-knitr::kable(head(surveys), caption = "**Sample survey info format**") %>%
+knitr::kable(head(animal_surveys), caption = "**Sample survey info format**") %>%
   kableExtra::kable_styling("striped", font_size = 10) %>% kableExtra::scroll_box(width = "100%")
 ```
 
@@ -65,10 +65,10 @@ knitr::kable(head(surveys), caption = "**Sample survey info format**") %>%
 Collected fauna survey data in the format detailed in the previous section can be easily subset with respect to `town`, `round` and/or `priority` with the `filter_obs` function. For example, a specific set of surveys (i.e. butterfly surveys in Tampines from 2020-2021) can be filtered as follows:
 
 ```{r filter_obs example, eval = FALSE}
-data(fauna)
-data(surveys)
+data(animal_observations)
+data(animal_surveys)
 
-butterflies_tampines_round_2 <- filter_obs(observations = fauna, survey_ref = surveys,
+butterflies_tampines_round_2 <- filter_obs(observations = animal_observations, survey_ref = animal_surveys,
                    specify_taxon = "Lepidoptera",
                    specify_area = "TP",
                    specify_period = "2")
@@ -140,18 +140,18 @@ normalised_perpt <- normalised_perpt %>%
 # loop across all bootstrapped iterations
 
 plot_sac <- 
-  foreach(i = seq_along(fauna), 
+  foreach(i = seq_along(animal_observations), 
           .packages = "tidyverse") %dopar% {
   
-  unique <- surveys[[i]] %>%
+  unique <- animal_surveys[[i]] %>%
     distinct(town, round, priority)
             
   results <- data.frame()
   
   for(j in 1:nrow(unique)){
     
-    sac_data <- sac_extractor(observations = fauna[[i]], 
-                              survey_ref = surveys[[i]],
+    sac_data <- sac_extractor(observations = animal_observations[[i]], 
+                              survey_ref = animal_surveys[[i]],
                               specify_town = unique$town[j], 
                               specify_round = unique$round[j], 
                               specify_priority = unique$priority[j])
